# ssvep-fbcca-wearability-benchmark

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: full_wearability_mvp.yaml  pilot_lee2019.yaml
data/: README.md
docs/: dataset_selection.md  datasets_selected.md  expected_outputs.md  implementation_roadmap.md  limitations.md  method_note.md  moabb_integration_plan.md  paper_skeleton.md  reproducibility_checklist.md
scripts/: make_report.py  run_wearability_benchmark.py
src/ssvep_fbcca/: __init__.py  cca.py  channel_ablation.py  evaluation.py  fbcca.py  filterbank.py  loaders.py  metrics.py  plotting.py  reference.py  statistics.py  validation.py
tests/: test_channel_ablation.py  test_classifiers.py  test_degradation_and_statistics.py  test_metrics.py  test_reference.py
