[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssvep-fbcca-wearability-benchmark"
version = "0.1.0"
description = "Wearability-readiness benchmark for FBCCA in SSVEP-BCI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anna Sokolova"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "pre-commit>=3.0"]
moabb = ["moabb>=1.1", "mne>=1.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
